// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmbeddedVisualizeHandler data$ observable can be used to get response data in the correct format 1`] = `
Object {
  "params": Object {},
  "visConfig": Object {},
  "visData": Object {},
  "visType": "histogram",
}
`;

exports[`EmbeddedVisualizeHandler update should add provided data- attributes to the html element 1`] = `
<div
  data-foo="bar"
  data-loading=""
  data-render-complete="false"
  data-rendering-count="0"
  data-shared-item=""
/>
`;

exports[`EmbeddedVisualizeHandler update should remove null data- attributes from the html element 1`] = `
<div
  data-baz="qux"
  data-loading=""
  data-render-complete="false"
  data-rendering-count="0"
  data-shared-item=""
/>
`;
